--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="lesson-02/01.js"></script>
 
     <!-- Lesson 3 -->
-    <script src="./lesson-03/01.js"></script>
+    <script src="/lesson-03/01.js"></script>
 
     <!-- Lesson 4 -->
     <script src="lesson-04/01.js"></script>
